Fixed UserDTO list being immutable